[gd_scene load_steps=2 format=3 uid="uid://ckxkgg88au5pf"]

[ext_resource type="Script" path="res://ui/main_menu.gd" id="1_bdvd7"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_bdvd7")

[node name="TitleLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -44.5
offset_right = 44.5
offset_bottom = 45.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Bodiless
Skeletons"
horizontal_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.0
offset_top = -104.0
offset_right = 69.0
offset_bottom = 101.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Buttons"]
layout_mode = 2

[node name="SeedLabel" type="Label" parent="Buttons/HBoxContainer"]
layout_mode = 2
text = "Seed
"

[node name="SeedTextInput" type="LineEdit" parent="Buttons/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Leave blank for random seed"

[node name="StartButton" type="Button" parent="Buttons"]
layout_mode = 2
text = "Start"
alignment = 0

[node name="SettingsButton" type="Button" parent="Buttons"]
layout_mode = 2
text = "Settings"
alignment = 0

[node name="QuitToDesktopButton" type="Button" parent="Buttons"]
layout_mode = 2
text = "Quit"
alignment = 0

[connection signal="text_changed" from="Buttons/HBoxContainer/SeedTextInput" to="." method="_on_seed_text_input_text_changed"]
[connection signal="pressed" from="Buttons/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Buttons/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Buttons/QuitToDesktopButton" to="." method="_on_quit_to_desktop_button_pressed"]
